...
          <Text style={styles.nextButtonText}>{this.props.navLabel}</Text>
        </View>
      </TouchableOpacity>
    );
  }
  renderProgressBar() {
    if(this.props.navLabel == 'Done') {
      return null;
    }else{
      return(
        <View style={styles.progressBarContainer}>
          <View style={{flex: 1, height: 4, backgroundColor: '#FF4F7D', marginRight: 2}} />
          <View style={{flex: 1, height: 4, backgroundColor: '#888888', marginRight: 2}} />
...
    return(
      <View style={searchBarContainer}>
        <TextInput
          style={searchBarText}
          placeholder="Search for an activity"
          onChangeText={onChangeText}
          testID={'searchBarTextField'}
        />
      </View>
    );
  }

  render() {
...
